// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data should match a snapshot with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-auto"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <p
            class="el-text-base el-body-text"
          >
            Support
          </p>
          <p
            class="el-text-base el-small-text el-has-grey-text"
          >
            Please see our
             
            <a
              href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
              rel="noopener noreferrer"
              target="_blank"
            >
              usage instructions
            </a>
             
            for further information on how to use these details to connect a number of popular BI applications.
          </p>
          <p
            class="el-text-base el-small-text el-has-grey-text el-has-section-margin"
          >
            Please see below for more resources.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            View Docs
          </button>
          <div>
            <button
              class="el-mb5 el-intent-neutral el-button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Video
            </button>
          </div>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Help
          </button>
        </aside>
        <section
          class="el-page-container"
        >
          <h1
            class="el-text-base el-title"
          >
            Sharing Data
          </h1>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
          </p>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
          </p>
          <h2
            class="el-text-base el-subtitle"
          >
            Available Data
          </h2>
          <div
            class="el-mb11 el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="3"
            role="table"
          >
            <div
              class="mocked-styled-101 el-table-headers-row"
              role="row"
            >
              <div
                aria-label="Name"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Name
              </div>
              <div
                aria-label="Provider"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Provider
              </div>
              <div
                aria-label="Description"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Description
              </div>
              <div
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name settings"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-110 el-table-row-container"
              role="row"
            >
              <div
                class="mocked-styled-103 el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Name"
                  >
                    RPS Database
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Provider"
                  >
                    Reapit Ltd
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Description"
                  >
                    Access to legacy data
                  </div>
                </div>
                <div
                  class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                  role="cell"
                  tabindex="0"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      title="Icon image with name more"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="mocked-styled-113 el-table-expandable-row"
              >
                <div
                  class="mocked-styled-114 el-table-expandable-container"
                >
                  <div
                    class="mocked-styled-2 el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-primary el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Create Share
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mocked-styled-110 el-table-row-container"
              role="row"
            >
              <div
                class="mocked-styled-103 el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Name"
                  >
                    RPS Views
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Provider"
                  >
                    Reapit Ltd
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Description"
                  >
                    Access to legacy views
                  </div>
                </div>
                <div
                  class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                  role="cell"
                  tabindex="0"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      title="Icon image with name more"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="mocked-styled-113 el-table-expandable-row"
              >
                <div
                  class="mocked-styled-114 el-table-expandable-container"
                >
                  <div
                    class="mocked-styled-2 el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-primary el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Create Share
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h2
            class="el-text-base el-subtitle"
          >
            Data Shares
          </h2>
          <div
            class="el-mb11 el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="5"
            role="table"
          >
            <div
              class="mocked-styled-101 el-table-headers-row"
              role="row"
            >
              <div
                aria-label="Data Set Name"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Data Set Name
              </div>
              <div
                aria-label="Database"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Database
              </div>
              <div
                aria-label="Schema"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Schema
              </div>
              <div
                aria-label="Warehouse"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Warehouse
              </div>
              <div
                aria-label="Region"
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                Region
              </div>
              <div
                class="mocked-styled-102 el-table-header"
                role="columnheader"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name settings"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-110 el-table-row-container"
              role="row"
            >
              <div
                class="mocked-styled-103 el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Data Set Name"
                  >
                    RPS Database
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Database"
                  >
                    reapit
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Schema"
                  >
                    customers_rps_DEV
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Warehouse"
                  >
                    STANDARD_WH
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                  role="cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                    data-narrow-label="Region"
                  >
                    eu-west-1
                  </div>
                </div>
                <div
                  class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                  role="cell"
                  tabindex="0"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      title="Icon image with name more"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="mocked-styled-113 el-table-expandable-row"
              >
                <div
                  class="mocked-styled-114 el-table-expandable-container"
                >
                  <div
                    class="mocked-styled-2 el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-neutral el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Copy URL
                      </button>
                      <button
                        class="el-intent-neutral el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Copy DSN
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Refresh Share
                      </button>
                      <button
                        class="el-intent-danger el-button"
                      >
                        <div
                          class="mocked-styled-0 el-button-loader"
                        />
                        Delete Share
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-auto"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <p
          class="el-text-base el-body-text"
        >
          Support
        </p>
        <p
          class="el-text-base el-small-text el-has-grey-text"
        >
          Please see our
           
          <a
            href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
            rel="noopener noreferrer"
            target="_blank"
          >
            usage instructions
          </a>
           
          for further information on how to use these details to connect a number of popular BI applications.
        </p>
        <p
          class="el-text-base el-small-text el-has-grey-text el-has-section-margin"
        >
          Please see below for more resources.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          View Docs
        </button>
        <div>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Video
          </button>
        </div>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Help
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <h1
          class="el-text-base el-title"
        >
          Sharing Data
        </h1>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
        </p>
        <h2
          class="el-text-base el-subtitle"
        >
          Available Data
        </h2>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="3"
          role="table"
        >
          <div
            class="mocked-styled-101 el-table-headers-row"
            role="row"
          >
            <div
              aria-label="Name"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Name
            </div>
            <div
              aria-label="Provider"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Provider
            </div>
            <div
              aria-label="Description"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Description
            </div>
            <div
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name settings"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-110 el-table-row-container"
            role="row"
          >
            <div
              class="mocked-styled-103 el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Name"
                >
                  RPS Database
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Provider"
                >
                  Reapit Ltd
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Description"
                >
                  Access to legacy data
                </div>
              </div>
              <div
                class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                role="cell"
                tabindex="0"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name more"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-113 el-table-expandable-row"
            >
              <div
                class="mocked-styled-114 el-table-expandable-container"
              >
                <div
                  class="mocked-styled-2 el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Create Share
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-110 el-table-row-container"
            role="row"
          >
            <div
              class="mocked-styled-103 el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Name"
                >
                  RPS Views
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Provider"
                >
                  Reapit Ltd
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Description"
                >
                  Access to legacy views
                </div>
              </div>
              <div
                class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                role="cell"
                tabindex="0"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name more"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-113 el-table-expandable-row"
            >
              <div
                class="mocked-styled-114 el-table-expandable-container"
              >
                <div
                  class="mocked-styled-2 el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Create Share
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <h2
          class="el-text-base el-subtitle"
        >
          Data Shares
        </h2>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="5"
          role="table"
        >
          <div
            class="mocked-styled-101 el-table-headers-row"
            role="row"
          >
            <div
              aria-label="Data Set Name"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Data Set Name
            </div>
            <div
              aria-label="Database"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Database
            </div>
            <div
              aria-label="Schema"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Schema
            </div>
            <div
              aria-label="Warehouse"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Warehouse
            </div>
            <div
              aria-label="Region"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Region
            </div>
            <div
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name settings"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-110 el-table-row-container"
            role="row"
          >
            <div
              class="mocked-styled-103 el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Data Set Name"
                >
                  RPS Database
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Database"
                >
                  reapit
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Schema"
                >
                  customers_rps_DEV
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Warehouse"
                >
                  STANDARD_WH
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Region"
                >
                  eu-west-1
                </div>
              </div>
              <div
                class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                role="cell"
                tabindex="0"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name more"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-113 el-table-expandable-row"
            >
              <div
                class="mocked-styled-114 el-table-expandable-container"
              >
                <div
                  class="mocked-styled-2 el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-neutral el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Copy URL
                    </button>
                    <button
                      class="el-intent-neutral el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Copy DSN
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Refresh Share
                    </button>
                    <button
                      class="el-intent-danger el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Delete Share
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Data should match a snapshot with no data and loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-auto"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <p
            class="el-text-base el-body-text"
          >
            Support
          </p>
          <p
            class="el-text-base el-small-text el-has-grey-text"
          >
            Please see our
             
            <a
              href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
              rel="noopener noreferrer"
              target="_blank"
            >
              usage instructions
            </a>
             
            for further information on how to use these details to connect a number of popular BI applications.
          </p>
          <p
            class="el-text-base el-small-text el-has-grey-text el-has-section-margin"
          >
            Please see below for more resources.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            View Docs
          </button>
          <div>
            <button
              class="el-mb5 el-intent-neutral el-button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Video
            </button>
          </div>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Help
          </button>
        </aside>
        <section
          class="el-page-container"
        >
          <h1
            class="el-text-base el-title"
          >
            Sharing Data
          </h1>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
          </p>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
          </p>
          <h2
            class="el-text-base el-subtitle"
          >
            Available Data
          </h2>
          <div
            class="mocked-styled-44 el-loader-container"
          >
            <div
              class="el-mb11 el-loader"
            >
              <div
                class="mocked-styled-47 el-loader-moving-bar"
              />
            </div>
          </div>
          <h2
            class="el-text-base el-subtitle"
          >
            Data Shares
          </h2>
          <div
            class="mocked-styled-44 el-loader-container"
          >
            <div
              class="mocked-styled-46 el-loader"
            >
              <div
                class="mocked-styled-47 el-loader-moving-bar"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-auto"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <p
          class="el-text-base el-body-text"
        >
          Support
        </p>
        <p
          class="el-text-base el-small-text el-has-grey-text"
        >
          Please see our
           
          <a
            href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
            rel="noopener noreferrer"
            target="_blank"
          >
            usage instructions
          </a>
           
          for further information on how to use these details to connect a number of popular BI applications.
        </p>
        <p
          class="el-text-base el-small-text el-has-grey-text el-has-section-margin"
        >
          Please see below for more resources.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          View Docs
        </button>
        <div>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Video
          </button>
        </div>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Help
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <h1
          class="el-text-base el-title"
        >
          Sharing Data
        </h1>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
        </p>
        <h2
          class="el-text-base el-subtitle"
        >
          Available Data
        </h2>
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="el-mb11 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
        <h2
          class="el-text-base el-subtitle"
        >
          Data Shares
        </h2>
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
